# ts-native

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gjs_1.drawio
_extension/gslang/: CHANGELOG.md  gslang-0.0.1.vsix  package.json  vsc-extension-quickstart.md
_extension/gslang/syntaxes/: gs.json
_extension/gslang/themes/: gs.tmTheme
_extension/tsnlang/: language-configuration.json  package.json  tsnlang-0.0.1.vsix  vsc-extension-quickstart.md
_extension/tsnlang/syntaxes/: tsn.json
_extension/tsnlang/themes/: tsn.tmTheme
_langsrv/: package-lock.json  package.json
_langsrv/client/: package-lock.json  package.json
_langsrv/client/src/: extension.ts
_langsrv/server/src/: language.ts  server.ts  (+2 more)
_playground/: CMakeLists.txt  main.cpp
_tests/: CMakeLists.txt  main.cpp
_tests/compiler/: lexer.hpp  parser.hpp
_tests/ffi/: host2host.hpp  host2host_args.hpp
_tests/input/: program_source.hpp
_tools/: CMakeLists.txt
_tools/gs2json/: CMakeLists.txt  gs2json.cpp
_tools/tsnc/: CMakeLists.txt  tojson.cpp  tsnc.cpp
cli/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/boids/: CMakeLists.txt  main.cpp  ui.h
include/backends/: b_vm.h  b_win_x86_64.h  backend.h  register_allocator.h  stack.h
include/builtin/: script_buffer.h
include/common/: errors.h  io.h  source_map.h  source_ref.h
include/gjs/: gjs.h  gjs.hpp
include/gs/: gs.h
include/lexer/: token.h
include/parser/: parse.h  parse_utils.h
include/tsn/: gs.h  tsn.h
include/util/: util.h
include/vm/: instruction_array.h  instruction_encoder.h
playground/: CMakeLists.txt  main.cpp  ui.cpp
src/: allocator.cpp  allocator.h  bind.cpp  bind.h  builtin.cpp  builtin.h  compile.cpp  compile.h  compile_log.cpp  compile_log.h  context.cpp  context.h  default_steps.cpp  default_steps.h  dyncall_test.cpp  errors.cpp  errors.h  exception.h  gjs.h  instruction.cpp  instruction.h  instruction_array.cpp  instruction_array.h  instruction_encoder.cpp  instruction_encoder.h  main.cpp  parse.cpp  parse.h  parse_utils.cpp  parse_utils.h  pipeline.cpp  pipeline.h  readme.md  register.cpp  register.h  robin_hood.h  source_map.cpp  source_map.h  source_ref.cpp  source_ref.h  (+16 more)
src/backend/: RegisterAllocationStep.cpp  StackManager.cpp  input.cpp
src/backends/: b_vm.cpp  b_win_x86_64.cpp  b_win_x86_64.h  b_x86.cpp  backend.cpp  backend.h  be_vm.cpp  readme.md  register_allocator.cpp  register_allocator.h  stack.cpp  vm.h
src/bind/: ExecutionContext.cpp  bind.cpp  bind.h  bind_type.cpp  builtin.cpp  builtin.h  ffi.cpp
src/builtin/: Array.cpp  Builtin.cpp  Math.cpp  Memory.cpp  Pointer.cpp  builtin.cpp  builtin.h  script_array.cpp  script_array.h  script_buffer.cpp  script_buffer.h  script_dylib.cpp  script_math.cpp  script_pointer.cpp  script_process.cpp  script_string.cpp  script_string.h  script_vec2.cpp  script_vec3.cpp  script_vec4.cpp
src/common/: Config.cpp  Context.cpp  DataType.cpp  Function.cpp  FunctionRegistry.cpp  Module.cpp  Object.cpp  TypeRegistry.cpp  Typedefs.cpp  compile_log.cpp  compile_log.h  context.cpp  context.h  errors.cpp  errors.h  exception.h  exec_context.cpp  function_pointer.cpp  function_signature.cpp  io.cpp  module.cpp  module.h  pipeline.cpp  pipeline.h  script_context.cpp  script_context.h  script_enum.cpp  script_function.cpp  script_function.h  script_module.cpp  script_module.h  script_object.cpp  script_object.h  script_tracer.cpp  script_type.cpp  script_type.h  source_map.cpp  source_map.h  source_ref.cpp  source_ref.h  (+5 more)
src/compiler/: CodeHolder.cpp  Compiler.cpp  FunctionDef.cpp  IR.cpp  Logger.cpp  Output.cpp  OutputBuilder.cpp  Scope.cpp  StackManager.cpp  TemplateContext.cpp  Value.cpp  c_compile.cpp  c_compiler.cpp  c_context.cpp  c_data_type.cpp  c_expression.cpp  c_function.cpp  c_loops.cpp  c_statements.cpp  c_tac.cpp  c_variable.cpp  compile.h  compiler.cpp  compiler.h  context.cpp  context.h  data_type.cpp  data_type.h  expression.cpp  expression.h  function.cpp  function.h  lexer.cpp  parser.cpp  symbol_table.cpp  tac.h  variable.cpp  variable.h
src/ffi/: Closure.cpp  DataType.cpp  DataTypeRegistry.cpp  Function.cpp  FunctionRegistry.cpp  Object.cpp
src/interfaces/: IBackend.cpp  ICodeHolder.cpp  IContextual.cpp  IDataTypeHolder.cpp  IFunctionHolder.cpp  IOptimizationStep.cpp  IPersistable.cpp  ITypedObject.cpp  IWithLogger.cpp
src/io/: Workspace.cpp
src/lexer/: l_lexer.cpp  l_token.cpp  lexer.cpp  lexer.h  token.cpp  token.h
src/optimize/: CodeHolder.cpp  CommonSubexpressionElimination.cpp  ConstantFolding.cpp  ControlFlowGraph.cpp  CopyPropagation.cpp  DeadCodeElimination.cpp  LabelMap.cpp  LivenessData.cpp  OptimizationGroup.cpp  Optimize.cpp  ReduceMemoryAccessStep.cpp  cfg.cpp  liveness.cpp  optimize.cpp
src/parser/: ast.cpp  ast.h  class.cpp  context.cpp  context.h  p_ast.cpp  p_class.cpp  p_context.cpp  p_expression.cpp  p_function.cpp  p_loops.cpp  p_parse.cpp  p_statements.cpp  parse.cpp  parse.h  parse_utils.cpp  parse_utils.h
src/pipeline/: OptimizationGroup.cpp  Pipeline.cpp
src/util/: robin_hood.h  template_utils.cpp  template_utils.hpp  util.cpp  util.h
src/utils/: ModuleSource.cpp  ProgramSource.cpp  SourceLocation.cpp  SourceMap.cpp  function_match.cpp
src/vm/: Instruction.cpp  State.cpp  VM.cpp  VMBackend.cpp  allocator.cpp  allocator.h  context.cpp  context.h  instruction.cpp  instruction.h  instruction_array.cpp  instruction_array.h  instruction_encoder.cpp  instruction_encoder.h  register.cpp  register.h  vm.cpp  vm.h  vm_function.cpp  vm_function.h  vm_state.cpp  vm_state.h  vm_type.cpp  vm_type.h
tests/: CMakeLists.txt  bind.cpp  bind.hpp  create_unit_test.bat  default_test.txt  ffi_host2host.cpp  lexer.cpp  main.cpp  parse_declarations.cpp  parse_expressions.cpp  parse_helpers.cpp  parse_literals.cpp  parse_misc.cpp  parse_params.cpp  parse_statements.cpp  parse_types.cpp  parser.cpp  test.cpp
tests/mock/: ModuleSource.cpp  ModuleSource.h  ScriptMeta.cpp  ScriptMeta.h
tools/: CMakeLists.txt
tools/tsnc/: CMakeLists.txt  tojson.cpp  tojson.h  tsnc.cpp
tools/tsnr/: CMakeLists.txt  tsnr.cpp
(+227 files in other folders)
